# web-app2

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .shellcheckrc  Cargo.toml  README.md  new-utf8.txt  new.txt  web-app.code-workspace
.devcontainer/: Containerfile  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml
config/app/: app.conf
config/auth/: passwd.json
config/security/: csp.conf  headers.conf
docs/api/: API.md
docs/dev/: BUILD.md  CSS_STANDARDS.md  DEVELOPER_GUIDE.md  EXAMPLES.md  HTML_STANDARDS.md  INSTALL.md  JS_STANDARDS.md  TESTING.md  TOOLCHAIN.md
docs/project/: ROADMAP.md  TODO.md
docs/technical/: project-structure.txt  specfile.spec
enssol/: Cargo.toml
enssol/src/: main.rs
enssol/src/db/: mod.rs
enssol/src/guards/: auth.rs
enssol/src/models/: mod.rs  records.rs
enssol/src/routes/: api.rs  mod.rs  static_files.rs
enssol/static/: index.html  manifest.json  security.txt  web.xml
enssol/static/assets/js/: main.js
enssol/static/assets/js/api/: api-manager.js
enssol/static/views/pages/: w6946.html
scripts/: run.sh
scripts/middleware/: bridge.sh  compile.sh  monitor.sh  pickledb_middleware.sh
src/: async_handler.rs  bench.rs  error.rs  lib.rs  main.rs  security.rs  server.rs  static_files.rs
src/db/: mod.rs  pickledb_loader.rs  pickledb_schema.rs
src/routes/: api.rs  mod.rs
static/: index.html  robots.txt  sitemap.xml  sw.js  web.conf  weblinks.txt
static/assets/css/: main.css
static/assets/js/: main.js  utils.js
static/assets/js/api/: api-manager.js
static/views/pages/: audit.html  crud_ms1180.html  crud_profile.html  crud_scjv.html  crud_ws4696.html  dashboard.html  login.html  ms1180.html  profile.html  scjv.html
www/: dashboard.html  index.html
