[workspace]
members = [
    "enssol"
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
