[package]
name = "enssol"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A web application using Rust"
license = "MIT"

[dependencies]
# Security and Encryption
openssl = { version = "0.10", features = ["vendored"] }
jsonwebtoken = "9.2"
sha2 = "0.10"

# Networking and Web
tiny_http = "0.12"  # Fixed package name
tokio = { version = "1.0", features = ["full"] }
rocket = { version = "0.5.0", features = ["json"] }

# Utilities and Core
lru = "0.12"
zip = "0.6"
regex = "1.10"
sys-info = "0.9"
wasmer = "4.2"
dyon = "0.47"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
encoding_rs = "0.8.35"

# Database
polodb_core = "5.1.3"

# Logging and Monitoring
log = "0.4"
env_logger = "0.10"
prometheus = "0.13"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "enssol"
path = "src/main.rs"
